SVY-9787 Setting numeric value list items dynamically is causing problems