@@ -15,17 +15,12 @@
  */
 package org.sablo.specification.property.types;
 
-import java.text.NumberFormat;
-import java.text.ParseException;
-import java.util.Locale;
-
 import org.json.JSONException;
 import org.json.JSONWriter;
 import org.sablo.specification.PropertyDescription;
 import org.sablo.specification.property.IBrowserConverterContext;
 import org.sablo.specification.property.IPropertyConverterForBrowser;
 import org.sablo.util.ValueReference;
-import org.sablo.websocket.CurrentWindow;
 import org.sablo.websocket.utils.DataConversion;
 import org.sablo.websocket.utils.JSONUtils;
 import org.slf4j.Logger;
@@ -68,19 +63,8 @@ public class DoublePropertyType extends DefaultPropertyType<Double> implements I
 		{
 			if (((String)newJSONValue).trim().length() == 0) return null;
 
-			Locale locale = CurrentWindow.get().getSession().getLocale();
-			Number parsedValue;
-			try
-			{
-				parsedValue = NumberFormat.getNumberInstance(locale).parse((String)newJSONValue);
-				return parsedValue instanceof Double ? (Double)parsedValue : Double.valueOf(parsedValue.doubleValue());
-			}
-			catch (ParseException e)
-			{
-				log.warn("Parse exception while processing " + newJSONValue + " as a double", e);
-				if (returnValueAdjustedIncommingValue != null) returnValueAdjustedIncommingValue.value = Boolean.TRUE;
-				return null;
-			}
+			//same as utils.getasdouble
+			return new Double(((String)newJSONValue).replace(',', '.'));
 		}
 		return null;
 	}
